# seametrics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
customMAP/: AP.py
detection/: utils.py
detection/np/: pr_rec_f1.py
detection/tm/: pr_rec_f1.py
experimental/: user_metrics.ipynb
metrics/detection/: __init__.py  imports.py  utils.py
metrics/detection/np/: pr_rec_f1.py
metrics/detection/tm/: pr_rec_f1.py
notebooks/: LED_compute_softmin.ipynb  class_map.yaml  compute_mistakenness.ipynb  det_metrics_example.ipynb  horizon_metrics.ipynb  horizon_metrics_noise_model.ipynb  horizon_metrics_noise_model_sailing.ipynb  mot_example.ipynb  panoptic_quality.ipynb  payload.ipynb  plot_metric_vs_conf.ipynb  prrecf1_examples.ipynb  tracking_eda.ipynb
seametrics/: __init__.py  constants.py  payload.py
seametrics/annotations/: compute_softmin.py  label2id.json  utils.py
seametrics/customMAP/: AP.py
seametrics/detection/: __init__.py  cocoeval.py  imports.py  utils.py
seametrics/detection/np/: pr_rec_f1.py  utils.py
seametrics/detection/tm/: pr_rec_f1.py
seametrics/fo_to_payload/: utils.py
seametrics/fo_utils/: __init__.py  utils.py
seametrics/horizon/: README.md  horizon.py  utils.py
seametrics/mistakenness/: compute_mistakenness.py  mistakenness.py
seametrics/panoptic/: __init__.py  consts.py  pq.py  utils.py
seametrics/panoptic/tm/: functionalities.py
seametrics/payload/: __init__.py  processor.py
seametrics/segmentation/: __init__.py  pq.py  utils.py
seametrics/softmin_score/: softmin_score.py  utils.py
seametrics/tracking/: imports.py  track.py  utils.py
tests/: test_payload.py
tests/detection/: test_add_batch.py  test_fo_dets_to_metrics_dict.py  test_pr_rec_f1.py  test_utils.py
tests/detection/fo_utils/: dependencies.py  test_utils.py
tests/horizon/: test_horizon.py  test_horizon_utils.py
tests/panoptic/: consts.py  test_panoptic_pq.py  test_panoptic_utils.py
tests/payload/: test_processor.py
tracking/: __init__.py  track.py  utils.py
