[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sea.metrics"
version = "0.0.8"
authors = [
  { name="Kevin Serrano" },
  { name="Vasco Rodrigues" },
]
description = "Custom metrics for evaluating performance of A.I. pipelines at SEA.AI"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Required dependencies
dependencies = [
    "numpy>=1.22.2",
    "pandas>=1.1.4",
    "pycocotools>=2.0.0",
    "tqdm>=4.64.0",
    "typing_extensions>=4.7.0",
    "motmetrics>=1.4.0"
]

[project.urls]
Homepage = "https://github.com/SEA-AI/metrics"
Issues = "https://github.com/SEA-AI/metrics/issues"

# Tools settings
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ["metrics*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["notebooks*"]  # exclude packages matching these glob patterns (empty by default)
