[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seametrics"
dynamic = ['version']
authors = [{ name = "Kevin Serrano" }, { name = "Vasco Rodrigues" }]
description = "Custom metrics for evaluating performance of A.I. pipelines at SEA.AI"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

# Required dependencies
dependencies = [
  "numpy>=1.22.2",
  "pandas>=1.1.4",
  "pycocotools>=2.0.0",
  "tqdm>=4.64.0",
  "typing_extensions>=4.7.0",
  "motmetrics>=1.4.0",
]

[project.optional-dependencies]
fiftyone = ["fiftyone>=0.23.4"]
test = [
  "pytest>=7",
  "pytest-cov>=4",
  "pytest-mock>=3",
  # "pytest-xdist>=2.4.0",
  # "pytest-asyncio>=0.15.1",
  # "pytest-asyncio-network-simulator"
]
panoptic = [
  "torchmetrics>=1.4.0",
  "cleanlab",
  "transformers",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/SEA-AI/metrics"
Issues = "https://github.com/SEA-AI/metrics/issues"

[tool.setuptools.dynamic]
version = { attr = "seametrics.__version__" }

# Tools settings
[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
# include = ["seametrics*"]  # package names should match these glob patterns (["*"] by default)
exclude = [
  "notebooks*",
] # exclude packages matching these glob patterns (empty by default)

# Pytest settings
[tool.pytest.ini_options]
minversion = 6.0
#addopts = "--import-mode=importlib"
addopts = "-q --cov -s"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

# Coverage settings
[tool.coverage.report]
include = ["seametrics/*"]

# Flake8 settings
[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [
  "notebooks*",
  "tests*",
  "docs*",
  "build*",
  "dist*",
  "seametrics.egg-info*",
  "seametrics/__init__.py"
]

# Pylint settings
[tool.pylint."MESSAGES CONTROL"]
max-line-length = 88
disable = """
  logging-fstring-interpolation,
"""
exclude = [
  "notebooks*",
  "tests*",
  "docs*",
  "build*",
  "dist*",
  "seametrics.egg-info*",
  "seametrics/__init__.py"
]
